--- a/Rails/G-map/目的地までの時間と距離を計算する.md
+++ b/Rails/G-map/目的地までの時間と距離を計算する.md
@@ -2,33 +2,69 @@
 DistanceMatrixサービスを使って目的地までの時間と距離を計算する。
 
 ```ruby
-function distance(inputAddress, location, destinations) {
+function createLists(places)
+  let dLocations = [];
   // DistanceMatrix サービスを生成
-  var distanceMatrixService = new google.maps.DistanceMatrixService();
-  for (let i = 0, destination; (destination = destinations[i]); i++) {
-    // 出発点
-    var orign1 = location;
-    var orign2 = inputAddress;
-    // 到着点
-    var destination1 = destination.geometry.location;
-    var destination2 = destination.name;
-    // DistanceMatrix の実行
-    distanceMatrixService.getDistanceMatrix({
-      origins: [orign1, orign2], // 出発地点
-      destinations: [destination1, destination2], // 到着地点
-      travelMode: google.maps.TravelMode.DRIVING, // 車モード or 徒歩モード
-    }, function (response, status) {
-      if (status == google.maps.DistanceMatrixStatus.OK) {
-        result = response.rows[0].elements[0];
-        var distance = result.distance.text;
-        var duration = result.duration.text;
-        console.log(distance, duration)
-      }
-    });
+  let distanceMatrixService = new google.maps.DistanceMatrixService();
+  for (let i = 0, destination; (destination = places[i]); i++) { 
+    var dLocation = destination.geometry.location
+    dLocations.push(dLocation);
   }
+  distanceMatrixService.getDistanceMatrix({ 
+    origins: [loc], // 出発地点
+    destinations: dLocations, // 到着地点
+    travelMode: google.maps.TravelMode.WALKING, //徒歩モード
+  }, function (response, status) {
+    if (status == google.maps.DistanceMatrixStatus.OK) {
+      result = response.rows[0].elements;
+      for (let j = 0; j < result.length; j++) {
+        var distance = result[j].distance.text; // 距離
+        var duration = result[j].duration.text; // 時間
+      }
+    }
+  })
 }
 ```
 
 # 解説
 今回は２点間の距離を計算する。（複数の経路の計算も可能）
-途中です
+
+```ruby
+function createLists(places)
+  let dLocations = [];
+  // DistanceMatrix サービスを生成
+  let distanceMatrixService = new google.maps.DistanceMatrixService();
+  // 到着地点の配列を作成する。
+  for (let i = 0, destination; (destination = places[i]); i++) { 
+    var dLocation = destination.geometry.location
+    dLocations.push(dLocation);
+  }
+```
+引数placesにはtextSearchで取得した場所の情報が配列で格納されています。
+ここで目的地の配列を作成し、それを用いてDistanceMatrixを実行していきます。
+
+
+```ruby
+  distanceMatrixService.getDistanceMatrix({ 
+    origins: [loc], // 出発地点
+    destinations: dLocations, // 到着地点
+    travelMode: google.maps.TravelMode.WALKING, //徒歩モード
+  }, function (response, status) {
+    if (status == google.maps.DistanceMatrixStatus.OK) {
+      result = response.rows[0].elements;
+      for (let j = 0; j < result.length; j++) {
+        var distance = result[j].distance.text; // 距離
+        var duration = result[j].duration.text; // 時間
+      }
+    }
+  })
+}
+```
+
+originsには出発地点の場所を指定します。今回出発地点は１箇所ですが、ルール上配列形式で指定しなければいけないので、[loc]としています。（変数locには出発地点の情報を格納しています。）
+destinationsには到着地点を指定しています。先ほど作成した配列dLocationsを指定しています。
+travelModeは移動手段を指定します。今回は徒歩の場合のみを想定しています。https://developers.google.com/maps/documentation/javascript/3.exp/reference?hl=ja#DistanceMatrixService
+これらの条件を指定して、DistanceMatrixを実行します。
+返り値responseには先ほど指定したoriginsとdestinationの住所が格納されています。
+そこから目的地までの距離と時間を順番に取り出して、それぞれ変数に格納しています。
+ 
